--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <canvas id="canvas1"></canvas>
     <script type="module" src="script.js"></script>
+    <img src="/assets/Sprites/Idle.png" alt="" id="playerIdle">
 </body>
 </html>
