--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="init.js"></script>
 </body>
 </html>
